test-cases/negative/test_019_return_without_function.lay
# negative test: return statement outside function
# expected: error should be thrown

return 5


